--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+    // Библиотека для использования RecyclerView
+    compile 'com.android.support:recyclerview-v7:27.0.2'
 }
