--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,11 +25,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
-    // Библиотека для использования RecyclerView
-    compile 'com.android.support:recyclerview-v7:27.0.2'
-
-    // Поля ввода текста
-    compile 'com.rengwuxian.materialedittext:library:2.1.4'
+    // Библиотеки разметки
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:design:27.0.2'
+    compile 'com.rengwuxian.materialedittext:library:2.1.4'
+    compile 'com.android.support:recyclerview-v7:27.0.2'
 }
