Added icon in item RecyclerView

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,7 @@ dependencies {
 
     // Валидатор
     compile 'com.mobsandgeeks:android-saripaar:1.0.0'
+
+    // Круглые ImageView
+    compile 'de.hdodenhof:circleimageview:2.1.0'
 }
