Implement ORM ORMLite and created ManDAO DAO class

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,7 @@ dependencies {
 
     // Круглые ImageView
     compile 'de.hdodenhof:circleimageview:2.1.0'
+
+    // ORM ORMLite
+    compile group: 'com.j256.ormlite', name: 'ormlite-android', version: '5.0'
 }
